task5/deploy/kafka/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentry
  name: sentry
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentry
  template:
    metadata:
      labels:
        app: sentry
    spec:
      containers:
        - image: confluentinc/cp-kafka:7.5.2
          name: sentry
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
