task5/deploy/kafka/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentry
  name: sentry
  namespace: default
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: sentry
  type: ClusterIP
