task5/deploy/kafka/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentry-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sentry
                port:
                  number: 9092
